@@ -1,3 +1,8 @@
+2020-07-06 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/memory.c:
+	  Document some design choices in memory function tests.
+
 2020-07-05 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c,
